# pytest-receptor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
devguide/: README.md  audit_action_register_2026-07-17.md  critical_audit_2026-07-17.md  draft_ideas.md  evidence_preserving_architecture_proposal.md  for_collaborators.md  molsysmt_pilot.md  molsysmt_real_cycle_pdb_2026-07-18.md  molsysmt_warning_group_evidence_2026-07-18.md  molsysmt_xdist_progress_reverification_2026-07-18.md  original_issue_in_pytest.md  prior_art_2026-07-19.md  pytest_reportlog_gate_decision_2026-07-22.md  scope_0.6.md  smonitor_and_molsyssuite_integration.md  superseded_proposals.md  todo_list.md  trust_and_adoption_criteria.md
devguide/pending_bugs/: README.md  external_test_paths_produce_invalid_rerun_and_location.md  setup_errors_counted_as_failed.md  warning_group_truncation_is_not_diagnostically_sufficient.md
devguide/pending_proposals/: README.md  built_in_normalizers_for_warning_variants.md  ci_error_annotations.md  configurable_rerun_command.md  molsysmt_pilot_remeasurement_5146688.md  molsysmt_pilot_scenario_matrix_2026-07-21.md  molsysmt_pilot_second_pass_observations.md  salvage_from_event_model_branch.md
devguide/resolved_bugs/: README.md  documented_full_report_path_misses_pytest_cache_d.md  external_single_test_rerun_loses_path_with_fixed_rootdir.md  molsysmt_incomplete_stats_closes_terminal_stream.md  molsysmt_xdist_incomplete_run_reported_pass.md  molsysmt_xdist_progress_skips_initial_deciles.md  native_extension_stdout_leaks_after_final_report.md  setup_errors_counted_as_failed.md  xdist_progress_is_not_bounded_by_deciles.md  xdist_startup_noise_leaks_into_compact_stdout.md
devguide/resolved_proposals/: README.md  configurable_rerun_command.md
devtools/: benchmark_results.md  benchmark_tokenizers.py
devtools/benchmarks/: last-run.json  run_benchmarks.py
devtools/conda-build/: meta.yaml
devtools/conda-envs/: pytest-receptor@uibcdf_3.13.yml
docs/: Makefile  benchmarks.md  conf.py  how-it-works.md  index.md  installation.md  limitations.md  make.bat  reference.md  usage.md
src/pytest_receptor/: __init__.py  collector.py  events.py  hooks.py  plugin.py  reader.py
tests/: test_packaging.py  test_plugin.py  test_token_savings.py
