[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-receptor"
version = "0.5.0"
description = "A pytest plugin to adapt test output for different receptors (humans, LLMs, CI)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pytest>=8.0.0",
]

[project.entry-points."pytest11"]
receptor = "pytest_receptor.plugin"

[project.optional-dependencies]
dev = [
    "ruff",
    "tiktoken",
]
