[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-receptor"
dynamic = ["version"]
description = "A pytest plugin to adapt test output for different receptors (humans, LLMs, CI)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pytest>=8.0.0",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.entry-points."pytest11"]
receptor = "pytest_receptor.plugin"

# Single source of truth for the version: src/pytest_receptor/__init__.py.
# The conda recipe carries a copy; tests/test_packaging.py checks it matches.
[tool.hatch.version]
path = "src/pytest_receptor/__init__.py"

[project.optional-dependencies]
dev = [
    "ruff",
    "tiktoken",
]
